--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,9 +1,15 @@
+{% extends "polls/base.html" %}
+
+{% block main_content %}
+
 {% if latest_question_list %}
     <ul>
         {% for question in latest_question_list %}
-            <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+            <li><a href='{% url "polls:detail" question.id %}'>{{ question.question_text }}</a></li>
         {% endfor %}
     </ul>
 {% else %}
     <p>You haven't uploaded any questions yet.</p>
 {% endif %}
+
+{% endblock %}
