--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -2,18 +2,20 @@
 
 {% block main_content %}
 
-<h1>{{ question.question_text }}</h1>
+<h1>{{question.question_text}}</h1>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% if error_message %}<p><strong>{{error_message}}</strong></p>{% endif %}
 
 <form action="{% url 'polls:vote' question.id %}" method="post">
 {% csrf_token %}
 {% for choice in question.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/>
-        <label for="choice{{ forloop.counter }}"> {{ choice.choice_text }}</label></br>
+	  <input type="radio" name="choice"  id="choice{{forloop.counter}}" value="{{choice.id}}"/>
+	  <label for="choice{{forloop.counter}}"> {{choice.choice_text}}</label></br>
 {% endfor %}
-
-<input type="submit" value="Vote"/>
+<input type="submit" class="btn btn-success" value="Vote"/>
 </form>
+<br>
+<a href="{% url 'polls:index' %}"><< Back To Question List</a>
+<br>
 
 {% endblock %}
