--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -2,13 +2,15 @@
 
 {% block main_content %}
 
-<h1>{{ question.question_text }}</h1>
+<h1>{{question.question_text}}</h1>
 <ul>
 	{% for choice in question.choice_set.all %}
-	    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+		<li>{{choice.choice_text}} -- {{choice.votes}} vote{{choice.votes|pluralize}}</li>
 	{% endfor %}
 </ul>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again???</a>
+<h4><a href="{% url 'polls:detail' question.id %}">Vote again?</a></h4>
+
+<br>
 
 {% endblock %}
